[package]
name = "browser-game-backend"
version = "0.1.0"
edition = "2018"

[dependencies]
# Async
tokio = { version = "1.5", features = ["full"] }
tokio-util = { version = "0.6", features = ["time"] }
tokio-tungstenite = "0.14"
futures-util = "0.3"
log = "0.4"
dotenv = "0.15"
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite" ] }